--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,6 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Decentralized identity provider" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -90,7 +89,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NFID</title>
+    <title>NFID | The identity layer for the Internet</title>
+    <meta name="description" content="The decentralized one-touch MFA identity provider and crypto wallet." />
+
+    <!-- Open Graph -->
+    <meta data-n-head="ssr" data-hid="og:title" property="og:title" content="NFID | The identity layer for the Internet">
+    <meta data-n-head="ssr" data-hid="og:desc" property="og:description" content="The decentralized one-touch MFA identity provider and crypto wallet.">
+    <meta data-n-head="ssr" data-hid="og:description" property="og:description" content="The decentralized one-touch MFA identity provider and crypto wallet.">
+    <meta data-n-head="ssr" data-hid="og:site_name" property="og:site_name" content="NFID | The identity layer for the Internet">
+    <meta data-n-head="ssr" data-hid="og:type" property="og:type" content="website">
+    <meta data-n-head="ssr" data-hid="og:url" property="og:url" content="https://nfid.one">
+    <meta data-n-head="ssr" data-hid="og:image" property="og:image" content="%PUBLIC_URL%/assets/nfid_og.jpg">
+    <meta data-n-head="ssr" data-hid="og:image:width" property="og:image:width" content="1200">
+    <meta data-n-head="ssr" data-hid="og:image:height" property="og:image:height" content="627">
+
+    <!-- Twitter Card -->
+    <meta data-n-head="ssr" data-hid="twitter:title" property="twitter:title" content="NFID | The identity layer for the Internet">
+    <meta data-n-head="ssr" data-hid="twitter:description" property="twitter:description" content="The decentralized one-touch MFA identity provider and crypto wallet.">
+    <meta data-n-head="ssr" data-hid="twitter:site" name="twitter:site" content="NFID">
+    <meta data-n-head="ssr" data-hid="twitter:card" name="twitter:card" content="summary_large_image">
+    <meta data-n-head="ssr" data-hid="twitter:image" property="twitter:image" content="https://3y5ko-7qaaa-aaaal-aaaaq-cai.ic0.app/assets/nfid_og.jpg">
+    <meta data-n-head="ssr" data-hid="twitter:image:alt" property="twitter:image:alt" content="NFID | The identity layer for the Internet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
