fix([sc-1546]): remove auto input zoom

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,7 @@
     -->
     <title>NFID | The identity layer for the Internet</title>
     <meta name="description" content="The decentralized one-touch MFA identity provider and crypto wallet." />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Open Graph -->
     <meta data-n-head="ssr" data-hid="og:title" property="og:title" content="NFID | The identity layer for the Internet">
