tests: add test canister to derivation origin testbed

--- a/demos/test-app/src/index.html
+++ b/demos/test-app/src/index.html
@@ -38,7 +38,12 @@
           style="display: inline-block; width: 200px"
           >Derivation Origin:</label
         >
-        <input type="text" id="derivationOrigin" placeholder="(use default)" />
+        <input
+          type="text"
+          id="derivationOrigin"
+          placeholder="(use default)"
+          value="https://o7chh-kaaaa-aaaaj-qaxua-cai.ic0.app/"
+        />
       </div>
       <button id="signinBtn">Sign In</button>
       <button id="signoutBtn">Sign Out</button>
