feat([sc-2932]): updated demo inside nfid-frontend

--- a/demos/test-app/src/index.html
+++ b/demos/test-app/src/index.html
@@ -24,7 +24,7 @@
         <label for="iiUrl" style="display: inline-block; width: 200px"
           >Identity Provider:
         </label>
-        <input type="text" id="iiUrl" value="https://pavlo.eu.ngrok.io" />
+        <input type="text" id="iiUrl" value="https://nfid.dev" />
       </div>
       <div>
         <label for="maxTimeToLive" style="display: inline-block; width: 200px"
@@ -42,7 +42,7 @@
           type="text"
           id="derivationOrigin"
           placeholder="(use default)"
-          value="https://o7chh-kaaaa-aaaaj-qaxua-cai.ic0.app/"
+          value="https://dq6kg-laaaa-aaaah-aaeaq-cai.ic0.app/"
         />
       </div>
       <button id="signinBtn">Sign In</button>
@@ -62,12 +62,16 @@
       <label for="hostUrl" style="display: inline-block; width: 120px"
         >Replica URL:
       </label>
-      <input type="text" id="hostUrl" value="https://ic0.app/" />
+      <input
+        type="text"
+        id="hostUrl"
+        value="https://3l2cj-5aaaa-aaaag-aaecq-cai.ic0.app/"
+      />
       <br />
       <label for="canisterId" style="display: inline-block; width: 120px"
         >Canister ID:
       </label>
-      <input type="text" id="canisterId" value="kvusz-kaaaa-aaaad-aabwa-cai" />
+      <input type="text" id="canisterId" value="3l2cj-5aaaa-aaaag-aaecq-cai" />
     </div>
     <div>
       <button id="whoamiBtn">Who Am I?</button>
